--- a/pagina1.html
+++ b/pagina1.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriz Determinante</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
     <h1>MATRIZES E DETERMINANTES</h1>
@@ -13,7 +15,7 @@
     </p>
     <p>A partir da representação é possível perceber melhor a estrutura m x n de uma matriz, onde são determinados cada um dos seus elementos.</p>
 
-    <img src="RepresentaçãoMatrizDeterminante.png" alt="Matriz determinante representação">
+    <img src="img/RepresentaçãoMatrizDeterminante.png" alt="Matriz determinante representação">
     
     <h2>Determinante</h2>
 
@@ -34,7 +36,7 @@
 
         <p>Veja abaixo como é feito o cálculo do determinante de uma matriz 2 por 2 (A 2 X 2)</p>
         
-        <img src="DiagonalPrincipaleSecundária.png" alt="Diagonal Principal e Scundária">
+        <img src="img/DiagonalPrincipaleSecundária.png" alt="Diagonal Principal e Scundária">
 
         <p>Para toda e qualquer  matriz quadrada 2 por 2, também chamada de <b>ordem 2</b>, o cálculo do determinante é feito por meio da demonstração exibida acima, <br>através da diagonal principal pela secundária.</p>
 
