--- a/pagina5.html
+++ b/pagina5.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRODUTO DE MATRIZES (SUBTRAÇÃO)</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
     <h1>PRODUTO DE MATRIZES (SUBTRAÇÃO)</h1>
@@ -13,7 +15,7 @@
 
     <p>Uma <b>matriz</b> é um conjunto retangular de números organizados em linhas e colunas. Cada número de uma matriz leva o nome de elemento ou entrada.</p>
 
-    <img src="LinhaColunaMatriz.png" alt="Linha e Coluna de uma matriz">
+    <img src="img/LinhaColunaMatriz.png" alt="Linha e Coluna de uma matriz">
 
     <p>As <b>dimensões</b> de uma matriz determinam, respectivamente, o número de linhas e colunas. Como a matriz A tem 2 linhas e 3 colunas, é chamada de matriz 2x3.</p>
 
@@ -23,10 +25,10 @@
 
     <p><u>Por exemplo, vamos considerar.</u></p>
 
-    <img src="ExemploMatrizCeD.png" alt="Exemplo de uma matriz">
+    <img src="img/ExemploMatrizCeD.png" alt="Exemplo de uma matriz">
 
     <p>Podemos calcular C - D subtraindo os elementos correspondentes nas matrizes C e D, conforme demonstrado abaixo.</p>
 
-    <img src="SubtraçãoDeUmaMatriz.png" alt="Subtraindo uma matriz">
+    <img src="img/SubtraçãoDeUmaMatriz.png" alt="Subtraindo uma matriz">
 </body>
 </html>
