--- a/pagina2.html
+++ b/pagina2.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matriz Transposta</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
     <h1>MATRIZ TRANSPOSTA</h1>
@@ -32,7 +34,7 @@
 
     <p>--> Exemplo: na imagem abaixo há uma representação de matriz com a substituição dos seus elementos numéricos. Considere a matriz A, então At é:</p>
 
-    <img src="MatrizTranspostaEx.png" alt="Exemplo de matriz transposta">
+    <img src="img/MatrizTranspostaEx.png" alt="Exemplo de matriz transposta">
 
     <p>No exemplo anterior, a matriz A é uma matriz de ordem 3x2, ou seja, possui 3 linhas e duas colunas.<br> Dessa forma, a matriz transposta At terá ordem 2x3 (inversa), 2 linhas e 3 colunas após a troca.</p>
 
