--- a/pagina3.html
+++ b/pagina3.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplicação de matrizes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="global.css">
 </head>
 <body>
     <h1>MULTIPLICAÇÃO DE MATRIZES</h1>
@@ -45,7 +47,7 @@
 
     <p>Logo, a matriz resultante é:</p>
 
-    <img src="MultiplicaçãoMatriz.png" alt="Multiplicação Matriz">
+    <img src="img/MultiplicaçãoMatriz.png" alt="Multiplicação Matriz">
 
     <p>Vale ressaltar que a multiplicação de B.A não é o mesmo que A.B. Isso acontece porque não aplica-se a <b>propriedade comutativa</b> na multiplicação de matrizes. 
     </p>
@@ -60,6 +62,6 @@
 
     <p>3 . [ 5 7 10] = [ 3.5 3.7 3.10 ] = [ 15 21 30 ]</p>
 
-    <img src="MatrizComNumeroReal.png" alt="">
+    <img src="img/MatrizComNumeroReal.png" alt="">
 </body>
 </html>
