--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +7,44 @@
     <title>Math</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <div id="div-logo">
             <img class="img-logo" src="img/math-1625770338-knb2png.png" alt="logo">
         </div>
         <div id="nav-links">
-
+            
+            <button class="btn" onclick="seeMore()">Menu</button>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pagina1.html">1</a></li>
-                <li><a href="pagina2.html">2</a></li>
-                <li><a href="pagina3.html">3</a></li>
-                <li><a href="pagina4.html">4</a></li>
-                <li><a href="pagina5.html">5</a></li>
-                <li><a href="pagina6.html">6</a></li>
-                <li><a href="pagina7.html">7</a></li>
-                <li><a href="pagina8.html">8</a></li>
-                <li><a href="pagina9.html">9</a></li>
+                <div class="cel-close">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pagina1.html">determinantes</a></li>
+                    <li><a href="pagina2.html">Transposta</a></li>
+                </div>
+                <span class="more">
+                    <button class="btn" onclick="seeMore()">FECHAR</button>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pagina1.html">determinantes</a></li>
+                    <li><a href="pagina2.html">Transposta</a></li>
+                    <li><a href="pagina3.html">Multiplicação</a></li>
+                    <li><a href="pagina4.html">soma</a></li>
+                    <li><a href="pagina5.html">subtração</a></li>
+                    <li><a href="pagina6.html">Matriz quadrada</a></li>
+                    <li><a href="pagina7.html">Matriz identidade</a></li>
+                    <li><a href="pagina8.html">matriz oposta</a></li>
+                    <li><a href="pagina9.html">Matriz simétrica</a></li>
+                </span>
             </ul>
-
+            
         </div>
     </nav>
+   <main id="container-all">
+            <article>
+                <h1>Math é um site que o ajudará em suas duvidas com martrizes</h1>
+            </article>
+   </main>
 </body>
 </html>
+<script src="function.js"></script>
