--- a/pagina9.html
+++ b/pagina9.html
@@ -32,8 +32,9 @@
                     <li><a href="pagina5.html">subtração</a></li>
                     <li><a href="pagina6.html">Matriz quadrada</a></li>
                     <li><a href="pagina7.html">Matriz identidade</a></li>
-                    <li><a href="pagina8.html">matriz oposta</a></li>
-                    <li><a href="pagina9.html">Matriz simétrica</a></li>
+                    <li><a href="pagina8.html">Igualdade de matriz</a></li>
+                    <li><a href="pagina9.html">Matriz oposta</a></li>
+                    <li><a href="pagina10.html">Matriz simétrica</a></li>
                 </span>
             </ul>
             
