fix e tela inicial

--- a/pagina1.html
+++ b/pagina1.html
@@ -94,6 +94,9 @@
                 
                 <p>- Alguns dos tipos de matrizes quadradas: matriz identidade, matriz inversa, matriz singular, matriz simétrica, matriz positiva definida e matriz negativa, matrizes opostas e transpostas.</p>
                 </div>
+                <footer class="footer">
+                    <p>Obrigado por acessar nossa plataforma</p>
+                </footer>
         </main>
             </body>
             </html>
