--- a/pagina10.html
+++ b/pagina10.html
@@ -64,7 +64,9 @@
             <img src="https://static.mundoeducacao.uol.com.br/mundoeducacao/2022/05/linhas-colunas-iguais-matrizes.png">
             <br>
             <p>Note que a primeira linha da matriz A é igual à primeira linha, também a primeira coluna da sua matriz transposta, o mesmo acontece com a segunda linha e com a terceira linha.</p>
-            
+            <footer class="footer">
+                <p>Obrigado por acessar nossa plataforma</p>
+            </footer>
         </main>
 </body>
 </html>
