--- a/pagina2.html
+++ b/pagina2.html
@@ -87,6 +87,9 @@
 
     <p>--> <strong>det(A) = det (At)</strong>: o determinante da original é igual ao determinante da transposta.</p>
     </div>
+    <footer class="footer">
+        <p>Obrigado por acessar nossa plataforma</p>
+    </footer>
 </main>
 </body>
 </html>
