--- a/pagina3.html
+++ b/pagina3.html
@@ -97,6 +97,9 @@
     <p>3 . [ 5 7 10] = [ 3.5 3.7 3.10 ] = [ 15 21 30 ]</p>
     
     <img src="img/MatrizComNumeroReal.png" alt="">
+    <footer class="footer">
+        <p>Obrigado por acessar nossa plataforma</p>
+    </footer>
 </main>
 </body>
 </html>
