--- a/pagina4.html
+++ b/pagina4.html
@@ -76,6 +76,9 @@
         
         <p>"Assim: A + B = C, onde C tem a mesma ordem de A e B."</p>
         </div>
+        <footer class="footer">
+            <p>Obrigado por acessar nossa plataforma</p>
+        </footer>
     </main>
     </body>
     </html>
