--- a/pagina5.html
+++ b/pagina5.html
@@ -65,6 +65,9 @@
         
         <img src="img/SubtraçãoDeUmaMatriz.png" alt="Subtraindo uma matriz">
         <br>
+        <footer class="footer">
+            <p>Obrigado por acessar nossa plataforma</p>
+        </footer>
     </main>
     </body>
 </html>
