--- a/pagina9.html
+++ b/pagina9.html
@@ -55,7 +55,9 @@
         <img src="https://www.preparaenem.com/upload/conteudo/images/Untitled-3(14).png">
         <br>
         <div class="caixa-texto"> Veja que os elementos correspondentes de cada uma das duas matrizes (A e –A) são números opostos, afinal a adição de matrizes é feita apenas entre os elementos correspondentes. Sendo assim, para obtermos uma matriz oposta à outra devemos mudar os sinais de </div><div class="caixa-texto">todos os elementos da matriz. Façamos um exemplo com números quaisquer.</div>
-        
+        <footer class="footer">
+            <p>Obrigado por acessar nossa plataforma</p>
+        </footer>
     </main>
 
 </body>
