--- a/pagina6.html
+++ b/pagina6.html
@@ -60,7 +60,9 @@
         <p>a11 = -1 é elemento da diagonal principal, pois i = j = 1.
             a31= 5 é elemento da diagonal secundária, pois i + j = n + 1 ( 3  + 1 = 3 + 1)</p>
             
-            
+            <footer class="footer">
+                <p>Obrigado por acessar nossa plataforma</p>
+            </footer>
         </main>
 </body>
 </html>
