--- a/pagina8.html
+++ b/pagina8.html
@@ -59,7 +59,10 @@
         <img src="https://www.alunosonline.com.br/upload/conteudo/images/igualdade.jpg">
         <br>
         <p style="text-align:center";>Observe que elas apresentam a mesma ordem, 2 x 2, e os elementos correspondentes são iguais.</p>
-    </main>
+    
+        <footer class="footer">
+            <p>Obrigado por acessar nossa plataforma</p>
+        </footer></main>
     </body>
 </html>
 <script src="function.js"></script>
