--- a/pagina8.html
+++ b/pagina8.html
@@ -60,9 +60,10 @@
         <br>
         <p style="text-align:center";>Observe que elas apresentam a mesma ordem, 2 x 2, e os elementos correspondentes são iguais.</p>
     
+    </main>
         <footer class="footer">
             <p>Obrigado por acessar nossa plataforma</p>
-        </footer></main>
+        </footer>
     </body>
 </html>
 <script src="function.js"></script>
